java/istio/infra/step-5/auth/3-demo/product-service-allow-order-service.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-service-auth-policy
  namespace: default
spec:  
  selector:
    matchLabels:
      app: product-service
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/order-service-sa"]
    to:
    - operation:
        methods: ["GET"]
